[tool.poetry]
name = "pdfworkshop"
version = "1.1.1"
description = "PDF compressor utility, using iLovePDF API"

license = "MIT"

authors = [
    "Eden-Box <dev@edenbox.cf>"
]

readme = 'README.md'

repository = "https://github.com/eden-box/pdfworkshop"
homepage = "https://github.com/eden-box/pdfworkshop"

keywords = ['python', 'pdf', 'compress', 'ilovepdf']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Topic :: Utilities',
    'Topic :: Office/Business',
]

[tool.poetry.dependencies]
python = "^3.6"  # compatible python versions must be declared here
edenpdf = "^1.0.1"
click = "~7.0"
appdirs = "~1.4.3"
binpacking = "~1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[tool.poetry.scripts]
pdfworkshop = 'pdfworkshop.cli:start'
